April 20, 2001: Alex Burger <alex@fragit.net>
-Now requires qstat2.4c.  Removed fixes to Tribes 2 code
 for qstat2.4b as qstat2.4c fixes the problems
-Added t2_analyze_serverinfo function to decode Game and
 GameType columns for Tribes 2.

April 19, 2001: Alex Burger <alex@fragit.net>
-Changed version to 0.9.6g
-Added Tribes 2 support.  Tribes 2 support requires at
 least QSTAT 2.4b.  As I do not even have Tribes 2 I
 can not test launching the game but it if it launches
 the same as Quake2, then it should work.  More work
 will be done to ensure the player and server info is
 being decoded correctly etc.

Feb 14, 2001: Bill Adams <bill@evil.inetarena.com>
-Oh dear god, I think I fixed the core dumps related
 to the reference counting on the server structures.
 At least to the best of my ability, I cannot make
 the server references increase or decrease
 over time: i.e. the program always exits with
 a reference count of one on all server structures.
 I could not figure out why it was 1 and not zero
 but I will deal with that later.

Feb 13, 2001: Bill Adams <bill@evil.inetarena.com>
-Changed version to 0.9.6f, added announcement dir
 and announcement.

Feb 07, 2001: Bill Adams <bill@evil.inetarena.com>
-Fixed the core dumps (for the most part) for real.
 The only time I have seen a core dump at this point
 is when updating a master list where there are not
 any servers already in the list.  However, once
 you have a list of servers, you should be able to
 update/refresh at will without any problems.
-Lots of debugging code with the debug(...) call. If
 you want lots of output, use -d 3, to see the servers
 it is parsing use -d 4. For an insane amount of output
 use -d 7.  Debug levels greater than three will
 will have so much output that it will most likely 
 slow down the program.
-Added a fair number of comments to the code.

Jan 31, 2001: Bill Adams <bill@evil.inetarena.com>
-Made it so OSP game types show up correctly.
