@@ -1,3 +1,10 @@
+June 5, 2001: Alex Burger <alex@fragit.net>
+-Tribes 2 games can now be launched.  Created a t2_exec
+ function. If a name is specified in Player Profile, it 
+ is used on the command line to log in.  This would only
+ work if you have saved your password in the game.
+ Otherwise it launches and prompts for login.
+
 April 20, 2001: Alex Burger <alex@fragit.net>
 -Now requires qstat2.4c.  Removed fixes to Tribes 2 code
  for qstat2.4b as qstat2.4c fixes the problems
